hover effect added

--- a/index.html
+++ b/index.html
@@ -111,39 +111,58 @@
   </section>
   
 
-    <!--output Gallery-->
-    <section class="w-full h-[150dvh]">
-        <div class="grid grid-cols-2 sm:grid-cols-5 sm:grid-rows-5 h-full">
-          <!-- Grid Items (2 Columns for Mobile, Unchanged Desktop) -->
-          <div class="grid-item col-span-1 sm:col-span-2 sm:row-span-2 bg-lime-500 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/Poss_image_work.png')">
-            <img src="/MIW_Website_Assets/Poss_image_work.png" class="w-full h-full object-contain" />
-          </div>
-          <div class="grid-item col-span-1 sm:row-span-2 sm:col-start-3 bg-red-700 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/BJ_image_work.png')">
-            <img src="/MIW_Website_Assets/BJ_image_work.png" class="w-full h-full object-contain" />
-          </div>
-          <div class="grid-item col-span-2 sm:col-span-2 sm:row-span-2 sm:col-start-4 bg-yellow-500 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/Ynot_image_work.png')">
-            <img src="/MIW_Website_Assets/Ynot_image_work.png" class="w-full h-full object-contain" />
-          </div>
-          <div class="grid-item col-span-1 sm:row-span-2 sm:row-start-3 bg-blue-900 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/Rockstar_image_work.png')">
-            <img src="/MIW_Website_Assets/Rockstar_image_work.png" class="w-full h-full object-contain" />
-          </div>
-          <div class="grid-item col-span-1 sm:col-span-2 sm:row-span-2 sm:row-start-3 bg-green-700 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/Dramila_image_work.png')">
-            <img src="/MIW_Website_Assets/Dramila_image_work.png" class="w-full h-full object-contain" />
-          </div>
-          <div class="grid-item col-span-2 sm:col-span-2 sm:row-span-2 sm:col-start-4 sm:row-start-3 bg-yellow-500 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/Bask_image_work.png')">
-            <img src="/MIW_Website_Assets/Bask_image_work.png" class="w-full h-full object-contain" />
-          </div>
-          <div class="grid-item col-span-1 sm:col-span-2 sm:row-start-5 bg-pink-500 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/OIC_image_work.png')">
-            <img src="/MIW_Website_Assets/OIC_image_work.png" class="w-full h-full object-contain" />
-          </div>
-          <div class="grid-item col-span-1 sm:col-start-3 sm:row-start-5 bg-red-700 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/Redknot_image_work.png')">
-            <img src="/MIW_Website_Assets/Redknot_image_work.png" class="w-full h-full object-contain" />
-          </div>
-          <div class="grid-item col-span-2 sm:col-span-2 sm:col-start-4 sm:row-start-5 bg-gray-200 cursor-pointer" onclick="openFullscreen('/MIW_Website_Assets/Coffe_image_work.png')">
-            <img src="/MIW_Website_Assets/Coffe_image_work.png" class="w-full h-full object-contain" />
-          </div>
+    <!-- Output Gallery -->
+<section class="w-full h-[150dvh]">
+    <div class="grid grid-cols-2 sm:grid-cols-5 sm:grid-rows-5 h-full">
+        <!-- Grid Items (2 Columns for Mobile, Unchanged Desktop) -->
+        <div class="grid-item col-span-1 sm:col-span-2 sm:row-span-2 bg-lime-500 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/Poss_image_work.png')">
+            <img src="/MIW_Website_Assets/Poss_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
         </div>
-      </section>
+        <div class="grid-item col-span-1 sm:row-span-2 sm:col-start-3 bg-red-700 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/BJ_image_work.png')">
+            <img src="/MIW_Website_Assets/BJ_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+        </div>
+        <div class="grid-item col-span-2 sm:col-span-2 sm:row-span-2 sm:col-start-4 bg-yellow-500 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/Ynot_image_work.png')">
+            <img src="/MIW_Website_Assets/Ynot_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+        </div>
+        <div class="grid-item col-span-1 sm:row-span-2 sm:row-start-3 bg-blue-900 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/Rockstar_image_work.png')">
+            <img src="/MIW_Website_Assets/Rockstar_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+        </div>
+        <div class="grid-item col-span-1 sm:col-span-2 sm:row-span-2 sm:row-start-3 bg-green-700 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/Dramila_image_work.png')">
+            <img src="/MIW_Website_Assets/Dramila_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+        </div>
+        <div class="grid-item col-span-2 sm:col-span-2 sm:row-span-2 sm:col-start-4 sm:row-start-3 bg-yellow-500 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/Bask_image_work.png')">
+            <img src="/MIW_Website_Assets/Bask_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+        </div>
+        <div class="grid-item col-span-1 sm:col-span-2 sm:row-start-5 bg-pink-500 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/OIC_image_work.png')">
+            <img src="/MIW_Website_Assets/OIC_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+        </div>
+        <div class="grid-item col-span-1 sm:col-start-3 sm:row-start-5 bg-red-700 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/Redknot_image_work.png')">
+            <img src="/MIW_Website_Assets/Redknot_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+        </div>
+        <div class="grid-item col-span-2 sm:col-span-2 sm:col-start-4 sm:row-start-5 bg-gray-200 cursor-pointer overflow-hidden"
+            onclick="openFullscreen('/MIW_Website_Assets/Coffe_image_work.png')">
+            <img src="/MIW_Website_Assets/Coffe_image_work.png"
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+        </div>
+    </div>
+</section>
+
       
    
     <!-- Fullscreen Modal -->
