--- a/service.html
+++ b/service.html
@@ -20,7 +20,7 @@
     <nav class="bg-transparent px-4 fixed w-full top-0 left-0 z-50">
         <div class="flex justify-between items-center max-w-6xl mx-auto">
           <!-- Logo -->
-          <div class="text-white text-2xl font-bold">
+          <div class="text-white text-2xl font-bold" onclick="window.location.href='/index.html'">
             <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-20 h-20">
           </div>
       
