--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
           <!-- Desktop Menu -->
           <ul class="hidden md:flex space-x-6 text-lg uppercase text-white">
-            <li><a href="#" class="active">Home</a></li>
+            <li><a href="/index.html" class="active">Home</a></li>
             <li><a href="#">Work</a></li>
             <li><a href="/service.html">Services</a></li>
             <li><a href="#">Team</a></li>
@@ -80,10 +80,10 @@
 
         <!-- Menu Items -->
         <ul class="text-center leading-[2.5rem]">
-            <li class="mt-2"><a href="#">H O M E</a></li>
+            <li class="mt-2"><a href="/index.html" class="font-bold text-blue-900">H O M E</a></li>
             <li class="mt-2"><a href="#">W O R K</a></li>
             <li class="mt-2"><a href="#">A B O U T</a></li>
-            <li class="mt-2"><a href="#" class="font-bold text-blue-900">S E R V I C E S</a></li>
+            <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
             <li class="mt-2"><a href="#" >T E A M</a></li>
             <li class="mt-2"><a href="#">T E S T I M O N I A L S</a></li>
             <li class="mt-2"><a href="#">C O N T A C T</a></li>
