--- a/team.html
+++ b/team.html
@@ -46,23 +46,28 @@
         </ul>
     </div>
 
-     <!-- Main Page -->
-     <section class="relative w-full h-screen flex items-center justify-center">
-        <!-- Background Image -->
-        <div class="absolute inset-0">
-            <img src="/png-team/horses.png" alt="Background Image" class="w-full h-full object-cover">
-        </div>
+    <!-- Main Page -->
+<section class="relative w-full h-screen flex items-center justify-center">
+    <!-- Background Video -->
+    <div class="absolute inset-0 overflow-hidden">
+        <video autoplay loop muted playsinline class="w-full h-full object-cover">
+            <source src="/png-team/AdobeStock_99504571.mov" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="absolute inset-0 bg-[#24d56d] opacity-60"></div>
+    </div>
 
-        <!-- Centered Text Content -->
-        <div class="relative z-10 text-white text-right px-6">
-            <h1 class="text-4xl sm:text-6xl font-bold">OUR TEAM</h1>
-            <p class="mt-4 max-w-2xl text-lg sm:text-xl">
-                We are an award-winning, full-service design, advertising & digital agency. 
-                We work in all industry sectors from International brands to small retail outlets. 
-                We believe passionately in the power of well-crafted design solutions and in truly listening to our clients.
-            </p>
-        </div>
-    </section>
+    <!-- Centered Text Content -->
+    <div class="relative z-10 text-white text-right px-6">
+        <h1 class="text-4xl sm:text-6xl font-bold">OUR TEAM</h1>
+        <p class="mt-4 max-w-2xl text-lg sm:text-xl">
+            We are an award-winning, full-service design, advertising & digital agency. 
+            We work in all industry sectors from International brands to small retail outlets. 
+            We believe passionately in the power of well-crafted design solutions and in truly listening to our clients.
+        </p>
+    </div>
+</section>
+
 
     <!-- Individual Team Section -->
     <section class="py-16">
