--- a/service.html
+++ b/service.html
@@ -11,7 +11,7 @@
         .active {
             background-color: yellow;
             color: blue;
-            padding: 30px 10px 18px 10px;
+            padding: 35px 10px 18px 10px;
         }
         /* Apply a smooth transition */
         .grid img {
@@ -34,11 +34,11 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="bg-transparent px-4 fixed w-full top-0 left-0 z-50">
+    <nav class="bg-transparent px-4 fixed w-full top-3 left-0 z-50">
         <div class="flex justify-between items-center max-w-6xl mx-auto">
           <!-- Logo -->
           <div class="text-white text-2xl font-bold" onclick="window.location.href='/index.html'">
-            <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-20 h-20">
+            <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-20 h-16">
           </div>
       
           <!-- Desktop Menu -->
@@ -48,7 +48,7 @@
             <li><a href="/service.html" class="active">Services</a></li>
             <li><a href="/team.html">Team</a></li>
             <li><a href="#">Testimonials</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/contactus.html">Contact</a></li>
           </ul>
       
           <!-- Mobile Menu Button -->
@@ -73,7 +73,7 @@
             <li class="mt-2"><a href="/service.html" class="font-bold text-blue-900">S E R V I C E S</a></li>
             <li class="mt-2"><a href="/team.html" >T E A M</a></li>
             <li class="mt-2"><a href="#">T E S T I M O N I A L S</a></li>
-            <li class="mt-2"><a href="#">C O N T A C T</a></li>
+            <li class="mt-2"><a href="/contactus.html">C O N T A C T</a></li>
         </ul>
     </div>
 
@@ -88,8 +88,8 @@
         <!-- Content 1 -->
         <div class="col-span-4 row-span-2 bg-green-500 p-6 text-white flex items-center justify-center text-center">
             <div class="text-left">
-                <h1 class="text-3xl font-bold">BRANDING</h1>
-                <p class="text-sm">LOGO DESIGN, BRAND POSITIONING,BRAND STRATEGY,NAMING & TAGLINE DEVELOPMENT,REBRANDING</p>
+                <h1 class="text-4xl font-bold leading-relaxed">BRANDING</h1>
+                <p class="text-sm">LOGO DESIGN, BRAND POSITIONING,BRAND STRATEGY,NAMING & <br> TAGLINE DEVELOPMENT,REBRANDING</p>
                 <button class="mt-2">
                     <img src="/services-assets/explore-button-white.png" alt="Explore" class="w-20 h-auto"> 
                 </button>
@@ -109,7 +109,7 @@
         <!-- Content 4 -->
         <div class="col-span-4 row-span-2 col-start-4 row-start-3 bg-white p-6 text-blue-700 flex items-center justify-center text-center">
             <div class="text-right">
-                <h1 class="text-3xl font-bold">ADVERTISING</h1>
+                <h1 class="text-4xl font-bold leading-relaxed">ADVERTISING</h1>
                 <p class="text-sm">PRINT,DIGITAL,FILM,PHOTOGRAPHY AND ART DIRECTION,OUT-OF-HOME ADVERTISING.</p>
                 <button class="mt-2">
                     <img src="/services-assets/explore-button-blue.png" alt="Explore" class="w-20 h-auto"> 
@@ -120,13 +120,15 @@
         <!-- Content 5 -->
         <div class="col-span-4 row-span-2 row-start-5 bg-pink-500 p-6 text-white flex items-center justify-center text-center">
             <div class="text-left">
-                <h1 class="text-3xl font-bold">DESIGNING</h1>
-                <p class="text-sm">GRAPHIC DESIGN,PACKINGDESIGN,WEBSITE DESIGN & DEVELOPMENT,UI/UX DESIGN,PROTOTYPING AND WIREFRAMING,MOTION GRAPHICS & ANIMATION</p>
-                <button class="mt-2">
-                    <img src="/services-assets/explore-button-white.png" alt="Explore" class="w-20 h-auto"> 
+                <h1 class="text-4xl font-bold leading-relaxed">DESIGNING</h1>
+                <p class="text-sm leading-loose">
+                    GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT,<br/> UI/UX DESIGN, PROTOTYPING AND WIREFRAMING, MOTION GRAPHICS & ANIMATION
+                </p>
+                <button class="mt-4">
+                    <img src="/services-assets/explore-button-white.png" alt="Explore" class="w-24 h-auto"> 
                 </button>
             </div>
-        </div>
+        </div>        
 
         <!-- Image 6 -->
         <div class="col-span-3 row-span-2 col-start-5 row-start-5 bg-gray-300">
@@ -140,20 +142,22 @@
 
         <!-- Content 8 -->
         <div class="col-span-4 row-span-2 col-start-4 row-start-7 bg-black p-6 text-white flex items-center justify-center text-center">
-            <div class="text-right">
-                <h1 class="text-3xl font-bold">FILM PRODUCTION</h1>
-                <p class="text-sm">TITLE ANIMATION,STOP MOTION ANIMATION,MOVIE TITLE SEQUENCE,2D ANIMATION & 3D ANIMATION</p>
-                <button class="mt-2">
-                    <img src="/services-assets/explore-button-white.png" alt="Explore" class="w-20 h-auto"> 
+            <div class="text-left">
+                <h1 class="text-4xl font-bold leading-relaxed">FILM PRODUCTION</h1>
+                <p class="text-md leading-relaxed">
+                    TITLE ANIMATION, STOP MOTION ANIMATION, MOVIE TITLE SEQUENCE,<br> 2D ANIMATION & 3D ANIMATION
+                </p>
+                <button class="mt-4">
+                    <img src="/services-assets/explore-button-white.png" alt="Explore" class="w-24 h-auto"> 
                 </button>
-            </div>
+            </div>            
         </div>
 
         <!-- Content 9 -->
         <div class="col-span-4 row-span-2 row-start-9 bg-blue-700 p-6 text-white flex items-center justify-center text-center">
             <div class="text-left">
-                <h1 class="text-3xl font-bold">UI / UX</h1>
-                <p class="text-sm">SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION-COPY,GRAPHICS AND VIDEO,INFLUENCER MARKETING</p>
+                <h1 class="text-4xl font-bold leading-relaxed">UI / UX</h1>
+                <p class="text-sm">SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION-COPY,<br/>GRAPHICS AND VIDEO,INFLUENCER MARKETING</p>
                 <button class="mt-2">
                     <img src="/services-assets/explore-button-white.png" alt="Explore" class="w-20 h-auto"> 
                 </button>
@@ -173,8 +177,8 @@
         <!-- Content 12 -->
         <div class="col-span-4 row-span-2 col-start-4 row-start-11 bg-[#ffd527] p-6 text-white flex items-center justify-center text-center">
             <div class="text-right text-blue-700">
-                <h1 class="text-3xl font-bold">INTEGRATED MARKETING</h1>
-                <p class="text-sm">360 MARKETING CAMPAIGNS,GUERRILLA MARKETING AND EXPERIENTIAL MARKETING,SPONSORSHIP AND PARTNERSHIPS</p>
+                <h1 class="text-4xl font-bold leading-relaxed">INTEGRATED MARKETING</h1>
+                <p class="text-sm">360 MARKETING CAMPAIGNS,GUERRILLA MARKETING AND EXPERIENTIAL MARKETING,<br/>SPONSORSHIP AND PARTNERSHIPS</p>
                 <button class="mt-2">
                     <img src="/services-assets/explore-button-blue.png" alt="Explore" class="w-20 h-auto"> 
                 </button>
@@ -256,9 +260,6 @@
                         </a>
                         <a href="#" class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                             <i class="fab fa-youtube"></i>
-                        </a>
-                        <a href="#" class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
-                            <i class="fab fa-vimeo"></i>
                         </a>
                         <a href="#" class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                             <i class="fa-brands fa-instagram"></i>
