--- a/team.html
+++ b/team.html
@@ -25,7 +25,6 @@
             </button>
         </div>
     </nav>
-
       
     <!-- Mobile Popup Menu (Overlay) -->
     <div id="mobile-menu" class="fixed top-0 left-0 w-full h-full bg-[#ffd527] flex flex-col justify-center items-center text-[#2025f8] text-xl uppercase tracking-widest z-50 hidden">
@@ -42,7 +41,7 @@
             <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
             <li class="mt-2"><a href="/team.html" class="font-bold text-blue-900">T E A M</a></li>
             <li class="mt-2"><a href="#">T E S T I M O N I A L S</a></li>
-            <li class="mt-2"><a href="#">C O N T A C T</a></li>
+            <li class="mt-2"><a href="/contactus.html">C O N T A C T</a></li>
         </ul>
     </div>
 
@@ -202,9 +201,6 @@
                         </a>
                         <a href="#" class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                             <i class="fab fa-youtube"></i>
-                        </a>
-                        <a href="#" class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
-                            <i class="fab fa-vimeo"></i>
                         </a>
                         <a href="#" class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                             <i class="fa-brands fa-instagram"></i>
