--- a/index.html
+++ b/index.html
@@ -218,33 +218,40 @@
             </button>
         </div>
 
-        <!-- Image Section (Grid for responsiveness) -->
-        <div class="w-full grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
-            <a href="#" onclick="event.preventDefault();" class="flex justify-center">
-                <div class="card">
-                    <div class="wrapper">
-                        <img src="/MIW_Website_Assets/SD-10.png" class="title object-cover w-full" />
-                    </div>
-                    <img src="/MIW_Website_Assets/SD-09.png" class="character w-full" />
+      <!-- Image Section (Grid for responsiveness) -->
+    <div class="w-full grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
+        <!-- Left Image -->
+        <a href="#" onclick="event.preventDefault();" class="flex justify-center">
+            <div class="card">
+                <div class="wrapper">
+                    <img src="/MIW_Website_Assets/SD-10.png" class="title object-cover w-full h-60 sm:h-72" />
                 </div>
-            </a>
-            <a href="#" onclick="event.preventDefault();" class="flex justify-center">
-                <div class="card">
-                    <div class="wrapper ">
-                        <img src="/MIW_Website_Assets/PS-Nandini-01png.png" class="title object-cover w-full h-full" />
-                    </div>
-                    <img src="/MIW_Website_Assets/PS-Nandini-02.png" class="character w-full" />
+                <img src="/MIW_Website_Assets/SD-09.png" class="character w-full h-72 sm:60" />
+            </div>
+        </a>
+
+        <!-- Middle Image (Higher than others) -->
+        <a href="#" onclick="event.preventDefault();" class="flex justify-center">
+            <div class="card">
+                <div class="wrapper">
+                    <img src="/MIW_Website_Assets/PS-Nandini-01png.png" class="title object-cover w-full h-72 sm:h-80" />
                 </div>
-            </a>
-            <a href="#" onclick="event.preventDefault();" class="flex justify-center">
-                <div class="card">
-                    <div class="wrapper">
-                        <img src="/MIW_Website_Assets/Kaththi-01.png" class="title object-cover w-full" />
-                    </div>
-                    <img src="/MIW_Website_Assets/Kaththi-06.png" class="character w-full" />
+                <img src="/MIW_Website_Assets/PS-Nandini-02.png" class="character w-full h-72 sm:60" />
+            </div>
+        </a>
+
+        <!-- Right Image -->
+        <a href="#" onclick="event.preventDefault();" class="flex justify-center">
+            <div class="card">
+                <div class="wrapper">
+                    <img src="/MIW_Website_Assets/Kaththi-01.png" class="title object-cover w-full h-60 sm:h-72" />
                 </div>
-            </a>
-        </div>
+                <img src="/MIW_Website_Assets/Kaththi-06.png" class="character w-full h-72 sm:60" />
+            </div>
+        </a>
+    </div>
+
+
     </div>
 </div>
     </section>
