updated home page and service content's

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <a href="#" onclick="event.preventDefault();" class="flex justify-center">
             <div class="card">
                 <div class="wrapper">
-                    <img src="/MIW_Website_Assets/SD-10.png" class="title object-cover w-full h-60 sm:h-72" />
+                    <img src="/MIW_Website_Assets/SD-10.png" class="title object-contain w-full h-60 sm:h-72" />
                 </div>
                 <img src="/MIW_Website_Assets/SD-09.png" class="character w-full h-72 sm:60" />
             </div>
@@ -234,7 +234,7 @@
         <a href="#" onclick="event.preventDefault();" class="flex justify-center">
             <div class="card">
                 <div class="wrapper">
-                    <img src="/MIW_Website_Assets/PS-Nandini-01png.png" class="title object-cover w-full h-72 sm:h-80" />
+                    <img src="/MIW_Website_Assets/PS-Nandini-01png.png" class="title object-contain w-full h-72 sm:h-80" />
                 </div>
                 <img src="/MIW_Website_Assets/PS-Nandini-02.png" class="character w-full h-72 sm:60" />
             </div>
@@ -244,9 +244,9 @@
         <a href="#" onclick="event.preventDefault();" class="flex justify-center">
             <div class="card">
                 <div class="wrapper">
-                    <img src="/MIW_Website_Assets/Kaththi-01.png" class="title object-cover w-full h-60 sm:h-72" />
+                    <img src="/MIW_Website_Assets/Kaththi-01.png" class="title object-contain w-full h-60 sm:h-72" />
                 </div>
-                <img src="/MIW_Website_Assets/Kaththi-06.png" class="character w-full h-72 sm:60" />
+                <img src="/MIW_Website_Assets/Kaththi-06.png" class="character object-contain w-full h-72 sm:60" />
             </div>
         </a>
     </div>
