--- a/team.html
+++ b/team.html
@@ -16,12 +16,12 @@
         <div class="flex justify-between items-center w-full max-w-full mx-auto">
             <!-- Logo (Left Corner) -->
             <div class="cursor-pointer" onclick="window.location.href='/index.html'">
-                <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-16 h-16">
+                <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16">
             </div>
 
             <!-- Mobile Menu Button (Right Corner) -->
             <button id="menu-btn" class="hover:text-yellow-400 transition duration-300">
-                <img src="/png-team/hambuger.png" alt="nav button" class="w-10 h-10">
+                <img src="/png-team/hambuger.png" alt="nav button" class="w-8 h-8 sm:w-10 sm:h-10 md:w-12 md:h-12">
             </button>
         </div>
     </nav>
@@ -69,7 +69,7 @@
 
 
     <!-- Individual Team Section -->
-    <section class="py-16">
+    <section class="py-16 px-6">
         <div class="relative max-w-4xl mx-auto">
             <!-- Person 1 -->
             <div class="flex items-center mb-20">
@@ -122,7 +122,7 @@
     </section>
 
     <!--whole team-->
-    <section class="flex items-center justify-center h-screen">
+    <section class="flex items-end justify-center min-h-1/2">
         <div class="max-w-4xl mx-auto">
             <img src="/png-team/Team.png" alt="Group Photo" class="w-full h-auto object-contain">
         </div>
