updated changes for mobile view errors

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav id="navbar" class="bg-transparent md:bg-green-500 p-4 fixed w-full top-0 left-0 z-50 backdrop-blur-md shadow-md transition-transform duration-300 -translate-y-full">
+    <nav id="navbar" class="bg-transparent md:bg-[#24d56d] p-4 fixed w-full top-0 left-0 z-50 backdrop-blur-md shadow-md transition-transform duration-300 -translate-y-full">
         <div class="flex justify-between items-center max-w-6xl mx-auto">
         <!-- Logo (Optional, Add Your Logo Here) -->
         <div class="text-white text-2xl font-bold"></div>
