--- a/team.html
+++ b/team.html
@@ -122,7 +122,7 @@
     </section>
 
     <!--whole team-->
-    <section class="flex items-end justify-center min-h-1/2">
+    <section class="flex items-end justify-center py-40 min-h-1/2">
         <div class="max-w-4xl mx-auto">
             <img src="/png-team/Team.png" alt="Group Photo" class="w-full h-auto object-contain">
         </div>
