completed the given mobile version changes till 22-03

--- a/service.html
+++ b/service.html
@@ -47,7 +47,6 @@
             <li><a href="#">Work</a></li>
             <li><a href="/service.html" class="active">Services</a></li>
             <li><a href="/team.html">Team</a></li>
-            <li><a href="#">Testimonials</a></li>
             <li><a href="/contactus.html">Contact</a></li>
           </ul>
       
@@ -72,7 +71,6 @@
             <li class="mt-2"><a href="#">A B O U T</a></li>
             <li class="mt-2"><a href="/service.html" class="font-bold text-blue-900">S E R V I C E S</a></li>
             <li class="mt-2"><a href="/team.html" >T E A M</a></li>
-            <li class="mt-2"><a href="#">T E S T I M O N I A L S</a></li>
             <li class="mt-2"><a href="/contactus.html">C O N T A C T</a></li>
         </ul>
     </div>
@@ -146,7 +144,7 @@
     <!-- Content 8 -->
     <div class="col-span-4 row-span-2 col-start-4 row-start-7 bg-black p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
         <div class="text-left">
-            <h1 class="text-3xl md:text-4xl font-bold leading-relaxed">FILM PRODUCTION</h1>
+            <h1 class="text-3xl md:text-4xl font-bold">FILM PRODUCTION</h1>
             <p class="text-xs sm:text-sm md:text-base leading-loose">
                 TITLE ANIMATION, STOP MOTION ANIMATION, MOVIE TITLE SEQUENCE, 2D ANIMATION & 3D ANIMATION
             </p>
@@ -182,7 +180,7 @@
     <!-- Content 12 -->
     <div class="col-span-4 row-span-2 col-start-4 row-start-11 bg-[#ffd527] p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
         <div class="text-right text-blue-700">
-            <h1 class="text-3xl md:text-4xl font-bold leading-relaxed">INTEGRATED MARKETING</h1>
+            <h1 class="text-3xl md:text-4xl font-bold">INTEGRATED MARKETING</h1>
             <p class="text-xs sm:text-sm md:text-base leading-loose">
                 360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND PARTNERSHIPS
             </p>
