changing footer in all pages

--- a/contactus.html
+++ b/contactus.html
@@ -188,7 +188,7 @@
             <div class="mt-10 grid grid-cols-1 gap-y-6 w-full">
                 <!-- First Row: Lists (Grid of 5 Items) -->
                 <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-5 gap-x-6 gap-y-6 w-full text-left md:text-left">
-                    <div class="w-full">
+                    <div class="w-full order-1 md:order-none">
                         <h3 class="font-semibold">HOME</h3>
                         <ul class="space-y-1">
                             <li>Why us</li>
