navbar updated in all pages like the home page

--- a/service.html
+++ b/service.html
@@ -34,8 +34,8 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="bg-transparent px-4 fixed w-full top-3 left-0 z-50">
-        <div class="flex justify-between items-center max-w-6xl mx-auto">
+    <nav class="bg-transparent backdrop-blur-md shadow-md px-4 fixed w-full left-0 z-50">
+        <div class="flex pt-4 justify-between items-center max-w-6xl mx-auto">
           <!-- Logo -->
           <div class="text-white text-2xl font-bold" onclick="window.location.href='/index.html'">
             <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16">
