--- a/contactus.html
+++ b/contactus.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="bg-transparent fixed w-full top-0 left-0 px-8 z-50 py-2">
-        <div class="flex justify-between items-center w-full max-w-full mx-auto">
+    <nav class="bg-transparent backdrop-blur-md shadow-md fixed w-full top-0 left-0 px-5 z-50">
+        <div class="flex pt-3 justify-between items-center w-full max-w-full mx-auto">
             <!-- Logo (Left Corner) -->
             <div class="cursor-pointer" onclick="window.location.href='/index.html'">
-                <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-16 h-16">
+                <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16">
             </div>
 
             <!-- Mobile Menu Button (Right Corner) -->
             <button id="menu-btn" class="hover:text-yellow-400 transition duration-300">
-                <img src="/services-assets/Hamburger-menu.png" alt="nav button" class="w-10 h-10">
+                <img src="/services-assets/Hamburger-menu.png" alt="nav button" class="w-8 h-8 sm:w-10 sm:h-10 md:w-12 md:h-12">
             </button>
         </div>
     </nav>
@@ -39,8 +39,8 @@
             <li class="mt-2"><a href="#">W O R K</a></li>
             <li class="mt-2"><a href="#">A B O U T</a></li>
             <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
-            <li class="mt-2"><a href="/team.html" class="font-bold text-blue-900">T E A M</a></li>
-            <li class="mt-2"><a href="/contactus.html">C O N T A C T</a></li>
+            <li class="mt-2"><a href="/team.html">T E A M</a></li>
+            <li class="mt-2"><a href="/contactus.html" class="font-bold text-blue-900">C O N T A C T</a></li>
         </ul>
     </div>
 
