--- a/team.html
+++ b/team.html
@@ -12,8 +12,8 @@
 <body>
     
     <!-- Navbar -->
-    <nav class="bg-transparent fixed w-full top-0 left-0 px-8 z-50 py-2">
-        <div class="flex justify-between items-center w-full max-w-full mx-auto">
+    <nav class="bg-transparent backdrop-blur-md shadow-md fixed w-full left-0 px-5 z-50">
+        <div class="flex pt-3 justify-between items-center w-full max-w-full mx-auto">
             <!-- Logo (Left Corner) -->
             <div class="cursor-pointer" onclick="window.location.href='/index.html'">
                 <img src="/services-assets/Logo-on-menu.png" alt="logo" class="w-12 h-12 sm:w-14 sm:h-14 md:w-16 md:h-16">
