--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <ul class="hidden md:flex space-x-6 text-lg uppercase text-white">
             <li><a href="/index.html" class="active">Home</a></li>
             <li><a href="#">Work</a></li>
+            <li><a href="/aboutus.html">About</a></li>
             <li><a href="/service.html">Services</a></li>
             <li><a href="/team.html">Team</a></li>
             <li><a href="/contactus.html">Contact</a></li>
@@ -81,7 +82,7 @@
         <ul class="text-center leading-[2.5rem]">
             <li class="mt-2"><a href="/index.html" class="font-bold text-blue-900">H O M E</a></li>
             <li class="mt-2"><a href="#">W O R K</a></li>
-            <li class="mt-2"><a href="#">A B O U T</a></li>
+            <li class="mt-2"><a href="/aboutus.html">A B O U T</a></li>
             <li class="mt-2"><a href="/service.html">S E R V I C E S</a></li>
             <li class="mt-2"><a href="/team.html" >T E A M</a></li>
             <li class="mt-2"><a href="#">C O N T A C T</a></li>
@@ -152,7 +153,7 @@
         <div class="grid-item col-span-1 sm:col-span-2 sm:row-start-5 bg-pink-500 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/OIC_image_work.png')">
             <img src="/MIW_Website_Assets/OIC_image_work.png"
-                class="w-full h-full object-cover object-left transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-cover transition-transform transform hover:scale-110 hover:opacity-80 duration-300" style="object-position: left;"/>
         </div>
         <div class="grid-item col-span-1 sm:col-start-3 sm:row-start-5 bg-red-700 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Redknot_image_work.png')">
@@ -245,9 +246,9 @@
         <a href="#" onclick="event.preventDefault();" class="flex justify-center">
             <div class="card mb-20 sm:mb-0">
                 <div class="wrapper">
-                    <img src="/MIW_Website_Assets/Kaththi-01.png" class="title object-contain w-full h-60 sm:h-72" />
+                    <img src="/MIW_Website_Assets/Kaththi-01.png" class="title object-contain w-full sm:h-72" />
                 </div>
-                <img src="/MIW_Website_Assets/Kaththi-06.png" class="character pt-5 pl-2 w-full h-72 sm:58" />
+                <img src="/MIW_Website_Assets/Kaththi-02.png" class="character pt-5 w-full h-72 sm:58" />
             </div>
         </a>
     </div>
