updated contactus svg and about page

--- a/index.html
+++ b/index.html
@@ -123,47 +123,47 @@
         <div class="grid-item col-span-1 sm:col-span-2 sm:row-span-2 bg-lime-500 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Poss_image_work.png')">
             <img src="/MIW_Website_Assets/Poss_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
         </div>
         <div class="grid-item col-span-1 sm:row-span-2 sm:col-start-3 bg-red-700 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/BJ_image_work.png')">
             <img src="/MIW_Website_Assets/BJ_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
         </div>
         <div class="grid-item col-span-2 sm:col-span-2 sm:row-span-2 sm:col-start-4 bg-yellow-500 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Ynot_image_work.png')">
             <img src="/MIW_Website_Assets/Ynot_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
         </div>
         <div class="grid-item col-span-1 sm:row-span-2 sm:row-start-3 bg-blue-900 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Rockstar_image_work.png')">
             <img src="/MIW_Website_Assets/Rockstar_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
         </div>
         <div class="grid-item col-span-1 sm:col-span-2 sm:row-span-2 sm:row-start-3 bg-green-700 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Dramila_image_work.png')">
             <img src="/MIW_Website_Assets/Dramila_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
         </div>
         <div class="grid-item col-span-2 sm:col-span-2 sm:row-span-2 sm:col-start-4 sm:row-start-3 bg-yellow-500 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Bask_image_work.png')">
             <img src="/MIW_Website_Assets/Bask_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
         </div>
         <div class="grid-item col-span-1 sm:col-span-2 sm:row-start-5 bg-pink-500 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/OIC_image_work.png')">
             <img src="/MIW_Website_Assets/OIC_image_work.png"
-                class="w-full h-full object-cover transition-transform transform hover:scale-110 hover:opacity-80 duration-300" style="object-position: left;"/>
+                class="w-full h-full object-cover transition-transform transform hover:scale-110 duration-300" style="object-position: left;"/>
         </div>
         <div class="grid-item col-span-1 sm:col-start-3 sm:row-start-5 bg-red-700 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Redknot_image_work.png')">
             <img src="/MIW_Website_Assets/Redknot_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
         </div>
         <div class="grid-item col-span-2 sm:col-span-2 sm:col-start-4 sm:row-start-5 bg-gray-200 cursor-pointer overflow-hidden"
             onclick="openFullscreen('/MIW_Website_Assets/Coffe_image_work.png')">
             <img src="/MIW_Website_Assets/Coffe_image_work.png"
-                class="w-full h-full object-contain transition-transform transform hover:scale-110 hover:opacity-80 duration-300" />
+                class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
         </div>
     </div>
 </section>
@@ -287,7 +287,7 @@
     <section class="min-h-screen h-auto flex flex-col">
     <div class="h-[100dvh] sm:h-[60dvh] relative overflow-hidden bg-[#ffd527]">
         <div class="container mx-auto px-4 h-full flex flex-col 
-        md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8 sm:py-4">
+        md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
         
         <!-- Quote Icon (Top) -->
         <img src="/MIW_Website_Assets/doubleqoute_High_Blue_testimonials.png"
@@ -306,9 +306,9 @@
         <!-- Image Section -->
         <div class="w-full md:w-[50%] flex justify-center md:justify-end items-end h-[60dvh] relative">
             <img id="testimonial-image" alt="Mani Rathnam Sir"
-                class="w-[100%] h-80 sm:h-60 md:h-full max-h-[60dvh] object-contain mx-auto absolute bottom-0 sm:relative">
+                class="w-[100%] h-80 sm:h-60 md:h-full max-h-[54dvh] object-contain mx-auto absolute bottom-0 sm:relative">
             <img src="/MIW_Website_Assets/doubleqoute_low_Yellow_testimonials.png"
-                alt="Bottom Quote" class="absolute bottom-5 right-0 sm:right-5 md:right-10 w-24 sm:w-16 md:w-20 hidden lg:block">
+                alt="Bottom Quote" class="absolute bottom-5 right-0 sm:right-5 md:right-14 w-24 sm:w-16 md:w-20 hidden lg:block">
         </div>
         </div>
 
